crates/solidity-v2/testing/snapshots/cst_output/from_v1/HexNumberExpression/hex_unit/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected WeiKeyword_Reserved. One of Ampersand, AmpersandAmpersand, AmpersandEqual, Asterisk, AsteriskAsterisk, AsteriskEqual, BangEqual, Bar, BarBar, BarEqual, Caret, CaretEqual, Equal, EqualEqual, GreaterThan, GreaterThanEqual, GreaterThanGreaterThan, GreaterThanGreaterThanEqual, GreaterThanGreaterThanGreaterThan, GreaterThanGreaterThanGreaterThanEqual, LessThan, LessThanEqual, LessThanLessThan, LessThanLessThanEqual, Minus, MinusEqual, MinusMinus, OpenBrace, OpenBracket, OpenParen, Percent, PercentEqual, Period, Plus, PlusEqual, PlusPlus, QuestionMark, Semicolon, Slash, SlashEqual was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/HexNumberExpression/hex_unit/input.sol:4:5]
   │
 4 │ 0x1 wei
   │     ─┬─  
   │      ╰─── Error occurred here.
───╯
